# espresso-shotdeck

./: README.md  pyproject.toml
examples/ci/: private-build-release.yml  public-static-host.yml
examples/config/: updater.example.json
examples/keys/: example-ed25519.pub
examples/manifest/: allowlist.json  shotdeck-stable-1.4.0.json
metadata/: shotdeck(1-touch)-stable.json  shotdeck-stable.json  update_allowlist.private.json
scripts/: check_update_connectivity.py  install_updater.sh  prompted_update_flow.py  run_configured_updater.sh
src/shotdeck_admin/: __init__.py  cli.py
src/shotdeck_manifest/: __init__.py  errors.py  models.py  signing.py  targeting.py
src/shotdeck_updater/: __init__.py  cli.py  client.py  config.py  download.py  errors.py  identity.py  installer.py  locking.py  logging_utils.py  patching.py  storage.py  system.py
systemd/: shotdeck-update-response.path  shotdeck-update-response.service  shotdeck-updater.service  shotdeck-updater.timer  shotdeck.service
tests/: test_checksums.py  test_client.py  test_identity.py  test_installer.py  test_manifest.py  test_patching.py  test_targeting.py
