[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shotdeck-public-updater"
version = "0.1.0"
description = "Public updater, manifest validation, and admin tooling for Shotdeck"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "packaging>=23.2",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.scripts]
shotdeck-updater = "shotdeck_updater.cli:main"
shotdeck-admin = "shotdeck_admin.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
